WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268688
[UnifiedPDF] Drive-by style fixes under WebKit/WebProcess/Plugins/PDF
https://bugs.webkit.org/show_bug.cgi?id=268688
Summary
[UnifiedPDF] Drive-by style fixes under WebKit/WebProcess/Plugins/PDF
Abrar Rahman Protyasha
Reported
2024-02-03 03:05:28 PST
Namely, we prefer `[retainPtr method:]` over `[retainPtr.get() method:]`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-03 03:05:36 PST
<
rdar://problem/122230060
>
Abrar Rahman Protyasha
Comment 2
2024-02-03 03:09:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23808
EWS
Comment 3
2024-02-03 15:39:29 PST
Committed
274052@main
(71e4e7e38446): <
https://commits.webkit.org/274052@main
> Reviewed commits have been landed. Closing PR #23808 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug