[UnifiedPDF] Drive-by style fixes under WebKit/WebProcess/Plugins/PDF https://bugs.webkit.org/show_bug.cgi?id=268688 rdar://122230060

Reviewed by Wenson Hsieh.

Namely, we prefer `[retainPtr method:]` over `[retainPtr.get() method:]`,
but also, move an annotation to avoid unnecessary ref-churn when calling
UnifiedPDFPlugin::setActiveAnnotation.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::maybeClearHighLatencyDataProviderFlag):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::handleMouseEvent):
(WebKit::UnifiedPDFPlugin::continueTrackingSelection):
(WebKit::UnifiedPDFPlugin::boundsForAnnotation const):

Canonical link: https://commits.webkit.org/274052@main